# megastore-busca-otimizada

./: .gitignore  Cargo.toml  README.md
data/: sample_products.jsonl
megastore-search/: README.md
megastore-search/benches/: bench_search.rs
megastore-search/src/: graph.rs  lib.rs  main.rs
megastore-search/tests/: search.rs
src/: engine.rs  index.rs  models.rs  search.rs  storage.rs  text.rs
tests/: cli.rs
