[package]
name = "megastore_search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sistema de busca otimizado + recomendacao baseada para catalogo de produtos (MegaStore)."

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
hashbrown = "0.14"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "bench_search"
harness = false
